feat: cria script para rodar o SonarQube localmente e ajusta os testes unitários
Script sonar.sh
- Sobe o SonarQube local em container (cria na primeira vez; depois só inicia)
- Define a senha do admin (Sonar@Local2026) e gera o token de análise
- Roda os testes com cobertura do JaCoCo, incluindo os E2E quando há
  Docker/Podman, e envia a análise
- pom.xml: propriedades do Sonar e versão fixa do sonar-maven-plugin
- README-IMPL: seção "Relatório do SonarQube" com o uso do script e o acesso

Correções apontadas pelo Sonar (14 issues -> 0, quality gate OK)
- KafkaSolicitarAutorizacaoAdapter: restaura o sinal de interrupção da
  thread ao capturar InterruptedException
- SecurityConfig e Cartao: supressões justificadas no código (CSRF em API
  stateless; Cartao com igualdade por identidade, não record)
- CriarCartaoService: ajusta comentário apontado como TODO

Ajustes nos testes unitários
- Novo KafkaSolicitarAutorizacaoAdapterTest: timeout e interrupção
- Asserções mais expressivas (isZero, hasSameHashCodeAs, encadeamento),
  remoção de eq() desnecessários, Stream.toList() e lambdas com uma
  única chamada que pode lançar exceção
- README-IMPL: 72 testes em 16 classes, cobertura de linhas 98,0%